EXTRA_DIST = testbench_simple.wxmx a.png b.png c.png d.png
DISTCLEANFILES = testbench_simple.html testbench_simple.tex testbench_simple.log\
	testbench_simple.tex

distclean-local:
	rm -r -f testbench_simple_htmlimg testbench_simple_img

wxmaximadatadir = ${datadir}/wxMaxima
wxmaximadata_DATA = testbench_simple.wxmx
